hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__stack_array__test__emit_clone@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/stack_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal void @_hl.main.1() {
alloca_block:
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca [2 x i64], align 8
  %"9_0" = alloca [2 x i64], align 8
  %"9_1" = alloca [2 x i64], align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 2, ptr %"7_0", align 4
  store i64 1, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  %0 = insertvalue [2 x i64] undef, i64 %"5_01", 0
  %1 = insertvalue [2 x i64] %0, i64 %"7_02", 1
  store [2 x i64] %1, ptr %"8_0", align 4
  %"8_03" = load [2 x i64], ptr %"8_0", align 4
  store [2 x i64] %"8_03", ptr %"9_0", align 4
  store [2 x i64] %"8_03", ptr %"9_1", align 4
  %"9_14" = load [2 x i64], ptr %"9_1", align 4
  %"9_05" = load [2 x i64], ptr %"9_0", align 4
  ret void
}
